--- a/style.scss
+++ b/style.scss
@@ -272,7 +272,7 @@ html,body{
             .daily-planner{
                 position: relative;
                 
-                video{
+                img{
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -304,7 +304,7 @@ html,body{
             .motivation{
                 position: relative;
                 
-                video{
+                img{
                     position: absolute;
                     top: 0;
                     left: 0;
